加入支持antPath扫描
Former-commit-id: 7633a0f3d19938ddcd40bc81559797cc734395f7